chart/templates/sonarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  labels:
    app: servarr
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - sonarr.markdavison.kiwi
      secretName: wildcard-markdavison-kiwi
  rules:
  - host: sonarr.markdavison.kiwi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr-svc
            port:
              number: 80
